feat: Install FFmpeg for video encoding via render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 # render.yaml file - Yah file Render ko deployment ke instructions degi
 services:
   - type: web
-    name: go-video-streamerw # Apne Web Service ka naam yahan likho
+    name: go-video-streamer # Apne Web Service ka naam yahan likho
     env: go
     # FFmpeg install karne ke liye pre-deploy hook
     # Debian/Ubuntu system par FFmpeg install karne ka tareeka
